Dummy_Package_for_scratch_org/main/default/objects/Selenium_Settings__c/Selenium_Settings__c.object-meta.xml
<CustomObject>
    <label>Selenium Settings</label>
    <nameField>
        <label>Selenium Test Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>