Dummy_Package_for_scratch_org/main/default/objects/Selenium_Settings__c/fields/Default_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Default_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This Credential will be used for Quick Runs. Each user has their own Quick Settings. Quick Settings are used when running tests using the Quick Run button.</inlineHelpText>
    <label>Default Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Selenium Settings</relationshipLabel>
    <relationshipName>SeleniumSettings</relationshipName>
    <type>Lookup</type>
</CustomField>