Dummy_Package_for_scratch_org/main/default/objects/Selenium_Settings__c/fields/Desired_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Desired_Capabilities__c</fullName>
    <label>Desired Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>