Dummy_Package_for_scratch_org/main/default/objects/Selenium_Settings__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sauce Labs</fullName>
            </value>
            <value>
                <fullName>Browser Stack</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>