Dummy_Package_for_scratch_org/main/default/objects/Selenium_Settings__c/fields/Webdriver_URL__c.field-meta.xml
<CustomField>
    <fullName>Webdriver_URL__c</fullName>
    <inlineHelpText>Eg for Browserstack:
http://USER:TOKEN@hub.browserstack.com:80/wd/hub

Eg for Saucelabs:
http://USER:TOKEN@ondemand.saucelabs.com:80/wd/hub/</inlineHelpText>
    <label>Webdriver URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>